--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -19,4 +19,122 @@ header{
       @apply ml-0 md:ml-auto;
     }
   }
+
+  .main-bar{
+    @apply container grid grid-cols-4 md:grid-cols-8 xl:grid-cols-12 gap-4 items-center py-5;
+
+    &__container{
+      @apply relative w-full;
+    }
+
+    &__logo{
+      @apply col-span-3 lg:col-span-2 prose prose-img:max-h-16 prose-img:my-0;
+    }
+
+    &__search{
+      @apply hidden md:block col-span-3 lg:col-span-2 lg:col-start-4;
+
+      span{
+        @apply block relative rounded text-md bg-background;
+      }
+
+      input[type="text"]{
+        @apply block bg-transparent w-full px-4 py-1.5;
+      }
+
+      button[type="submit"]{
+        @apply absolute right-2 inset-y-2 text-secondary;
+      }
+    }
+
+    &__links-desktop,
+    > *:last-child{
+      @apply col-span-1 xl:col-end-13 md:col-start-8 justify-self-end;
+    }
+
+    &__links-desktop{
+      @apply hidden xl:flex items-center justify-between text-center divide-x-2 divide-gray-3 ml-auto [&>*]:px-6 first:[&>*]:pl-0 last:[&>*]:pr-0;
+
+      &__item{
+        @apply flex flex-col items-center text-secondary px-2 py-1 rounded hover:underline hover:bg-background;
+
+        &-wrapper{
+          @apply flex gap-x-6;
+        }
+      }
+
+      svg{
+        @apply w-5 h-5 fill-current;
+      }
+
+      svg + span{
+        @apply text-sm first-letter:uppercase;
+      }
+    }
+
+    &__links-mobile{
+      @apply fixed bottom-0 left-0 z-20 bg-white w-full px-4 py-3 grid grid-cols-4 text-secondary shadow-[0_-4px_6px_rgba(198,198,198,0.25)];
+
+      &__trigger{
+        @apply flex flex-col items-center text-secondary cursor-pointer;
+
+        svg{
+          @apply w-5 h-5 fill-current;
+        }
+
+        span{
+          @apply text-sm first-letter:uppercase;
+        }
+      }
+
+      &__dropdown{
+        @apply absolute top-full left-0 z-20;
+      }
+    }
+
+    &__dropdown{
+      @apply divide-y divide-gray-3 z-20 w-64;
+
+      &-container{
+        @apply relative cursor-pointer;
+      }
+
+      &-notification{
+        @apply w-2.5 h-2.5 rounded-full bg-primary;
+      }
+
+      &-trigger{
+        @apply flex flex-col items-center text-secondary relative px-2 py-1;
+
+        &__notification{
+          @apply w-2.5 h-2.5 rounded-full block absolute -top-0.5 right-0 bg-primary;
+        }
+
+        &__avatar{
+          @apply block w-8 h-8 rounded-full border border-secondary overflow-hidden;
+
+          span{
+            @apply w-full h-full rounded-full overflow-hidden;
+          }
+
+          img{
+            @apply object-cover w-full h-full;
+          }
+        }
+      }
+    }
+
+    /* overwrite default dropdown styles */
+    [id*="dropdown-menu"]{
+      @apply py-0 mx-0 w-full md:w-auto;
+
+      &[aria-hidden="true"]{
+        @apply md:hidden;
+      }
+    }
+
+    [data-target*="dropdown"]{
+      @apply last-of-type:[&>svg]:block;
+    }
+  }
 }
