--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_header.scss
@@ -31,7 +31,11 @@ header{
       @apply hidden lg:flex justify-between items-center gap-2.5 [&>*]:text-lg [&>*]:text-white;
 
       &__dropdown-trigger{
-        @apply flex rounded overflow-hidden px-2 py-1 cursor-pointer relative hover:backdrop-brightness-75 focus:backdrop-brightness-75 focus:outline-none;
+        @apply flex rounded overflow-hidden px-2 py-1 relative;
+
+        &:not(.no-interactive){
+          @apply cursor-pointer hover:backdrop-brightness-75 focus:backdrop-brightness-75 focus:outline-none;
+        }
 
         svg{
           @apply w-6 h-6 fill-current;
@@ -39,7 +43,7 @@ header{
       }
 
       &__dropdown-content{
-        @apply absolute z-20 top-full left-8;
+        @apply absolute z-20 top-full left-8 cursor-auto;
 
         &-secondary{
           @apply absolute z-20 top-[calc(100%+12px)] left-0;
