Include an optional block_id in content_blocks base cell

--- a/decidim-core/app/cells/decidim/content_blocks/base/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/base/show.erb
@@ -1,3 +1,3 @@
-<%= content_tag :section, class: section_class, data: do %>
+<%= content_tag :section, class: section_class, id: block_id, data: do %>
   <%= render :content %>
 <% end %>
