Redesign: menu breadcrumb (#10200)
* Add FooterMenuPresenter to display menu items in footer

* Set fixed links in redesigned_main_legal partial

* Fix translation call

* Define a cell for static_pages and topics configured to appear in footer

* Reorder elements in main links of footer and define links and texts

* Fix path method call

* Fix translation

* Replace h5 with h2 in footer pages cells topics titles

* Use redesigned participatory space layout with a content_for block

* Add dynamic breadcrumb root menu elements

* Recover menu

* Move content to partial

* Remove fixed text

* Allow passing options to activity cell from activities cell and define layout and author layout

* Define a cell for last activities in breadcrumb root

* Add comment

* Fix deprecated method use

* Allow action buttons in menu to be defined from participatory spaces layouts

* Allow definition of extra breadcrumb elements from participatory spaces

* Define current space item and dropdown from participatory processes

* Remove :participatory_space_menu content_for element

* Integrate menu breadcrumb for mobile and tablet

* Remove unused partials

* Fix link and translation

* Fix linter offense and indentation

* Avoid accessibility validation errors in mobile version when secondary dropdown is blank

* Add links to breadcrumbs when url defined

* Fix headers hierarchy

* Define generic participatory space dropdown metadata cell

* Inherit process_dropdown metadata cell from generic cell

* Define assembly dropdown metadata cell

* Define current_participatory_space_breadcrumb_item for assemblies

* Remove useless blank line

* Define conference dropdown metadata cell

* Define current_participatory_space_breadcrumb_item for conferences

* refactor breadcrumb desktop

* refacto main dropdown

* refactor secondary dropdown

* Reorder methods

* Use diferent id for repeated element of breadcrumb

* 

--- a/decidim-core/app/cells/decidim/activity/show.erb
+++ b/decidim-core/app/cells/decidim/activity/show.erb
@@ -10,7 +10,7 @@
       </a>
     </span>
     <span>
-      <%= icon "treasure-map-line", class: "w-3.5 h-3.5 text-gray fill-current" %>
+      <%= icon "treasure-map-line" %>
       <%= participatory_space_link %>
     </span>
   </div>
