--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_main.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_main.html.erb
@@ -24,7 +24,7 @@
       </div>
 
       <div id="dropdown-menu-account-mobile" class="main-bar__links-mobile__dropdown" aria-hidden="true">
-        <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown" %>
+        <%= render partial: "layouts/decidim/header/redesigned_menu_breadcrumb_main_dropdown", locals: { id: "breadcrumb-main-dropdown-mobile" } %>
       </div>
     </div>
   </div>
