--- a/decidim-core/app/views/decidim/last_activities/_activities.html.erb
+++ b/decidim-core/app/views/decidim/last_activities/_activities.html.erb
@@ -1,13 +1,7 @@
 <% if activities.length == 0 %>
-  <div class="callout warning">
-    <%= t ".no_activities_warning" %>
-  </div>
+  <%= cell "decidim/announcement", t("decidim.user_activity.index.no_activities_warning") %>
 <% else %>
-  <%= render partial: "decidim/shared/results_per_page" %>
-
-  <div class="row">
-    <%= cell "decidim/activities", activities %>
-  </div>
-
-  <%= decidim_paginate activities, resource_type: params[:resource_type] %>
+  <%= cell "decidim/activities", activities %>
 <% end %>
+
+<%= decidim_paginate activities, resource_type: params[:resource_type] %>
