--- a/decidim-accountability/app/views/decidim/accountability/results/_projects_aside.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/_projects_aside.html.erb
@@ -4,7 +4,7 @@
   <h2 class="h1 decorator"><%= component_name %></h2>
 <% end %>
 
-<div class="accountability__status-container" turbo="false">
+<div class="accountability__status-container">
   <%= cell(
         "decidim/accountability/status",
         nil,
