--- a/decidim-core/app/views/decidim/last_activities/_activities.html.erb
+++ b/decidim-core/app/views/decidim/last_activities/_activities.html.erb
@@ -1,7 +1,6 @@
-<% if activities.length == 0 %>
-  <%= cell "decidim/announcement", t("decidim.user_activity.index.no_activities_warning") %>
-<% else %>
+<% if activities.exists? %>
   <%= cell "decidim/activities", activities %>
+  <%= decidim_paginate activities, resource_type: params[:resource_type] %>
+<% else %>
+  <%= cell "decidim/announcement", t("decidim.user_activity.index.no_activities_warning") %>
 <% end %>
-
-<%= decidim_paginate activities, resource_type: params[:resource_type] %>
