Add comment for redesign in drawer layout

--- a/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
+++ b/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
@@ -1,5 +1,6 @@
 <% close_url = local_assigns[:close_url] %>
 <div>
+  <%# REDESIGN_PENDING - Update layout and update %>
   <div>
     <% if local_assigns[:prev].present? %>
       <div data-drawer-prev><%= icon "arrow-right-s-line", class: "w-8 h-8 text-secondary fill-current" %></div>
