--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_map.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_map.scss
@@ -1,5 +1,10 @@
 [data-decidim-map]{
   @apply h-full bg-background z-0;
+
+  /* overwrite leaflet styles */
+  .leaflet-popup{
+    @apply absolute bg-black p-4 z-10 w-max max-w-xs rounded text-left text-white transition-all ease-in delay-300;
+  }
 }
 
 .static-map{
