--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_activity.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_activity.scss
@@ -1,15 +1,19 @@
 .activity{
-  @apply flex flex-col-reverse md:flex-row gap-2 md:gap-12;
+  @apply flex flex-col-reverse md:flex-row gap-2 md:gap-12 py-4 first:pt-0 last:pb-0;
+
+  &__container{
+    @apply divide-y divide-gray-3;
+  }
 
   &__time{
-    @apply w-full md:w-1/6 flex-none text-gray-2;
+    @apply w-full md:w-1/6 flex-none text-sm text-gray-2;
   }
 
   &__content{
     @apply space-y-2;
 
     > span:first-child a{
-      @apply text-secondary font-semibold;
+      @apply text-secondary font-semibold hover:underline;
     }
 
     > span:last-child{
