remove unnecessary class

--- a/decidim-core/app/views/decidim/last_activities/index.html.erb
+++ b/decidim-core/app/views/decidim/last_activities/index.html.erb
@@ -28,7 +28,7 @@
           end %>
       <% end %>
     </div>
-    <div id="activities" class="space-y-4">
+    <div id="activities">
       <%= render partial: "activities" %>
     </div>
   </div>
