fix icon anchor position

--- a/decidim-core/app/packs/stylesheets/decidim/map.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/map.scss
@@ -34,5 +34,5 @@
 }
 
 .leaflet-div-icon{
-  @apply text-4xl text-secondary -translate-x-1/2 -translate-y-1/2 border-0 bg-transparent;
+  @apply text-secondary border-0 bg-transparent;
 }
