Add comments to remaining code using drawer term

--- a/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
@@ -1,3 +1,4 @@
+<%# REDESIGN_PENDING - Replace this layout with other not using drawers %>
 <%= render layout: "layouts/decidim/shared/drawer", locals: { close_url: meetings_path } do %>
   <div class="meeting__container">
 
