--- a/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
+++ b/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
@@ -9,6 +9,7 @@
       <div data-drawer-next><%= icon "arrow-left-s-line", class: "w-8 h-8 text-secondary fill-current" %></div>
     <% end %>
     <div><%= yield %></div>
+    <%# REDESIGN_PENDING - Rename this file and this drawer_aside identifier if the content is reused to not mention drawer %>
     <aside><%= yield :drawer_aside %></aside>
   </div>
 </div>
