--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
@@ -91,7 +91,9 @@ edit_link(
   <% end %>
 
   <% if current_participatory_space.show_statistics? %>
-    <%= cell "decidim/statistics", stats.collection %>
+    <section class="content-block" data-statistics>
+      <%= cell "decidim/statistics", stats.collection %>
+    </section>
   <% end %>
 
   <section class="content-block">
