--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -158,7 +158,9 @@
   <% end %>
 
   <% if current_participatory_space.show_statistics? %>
-    <%= cell "decidim/statistics", stats.collection %>
+    <section class="content-block" data-statistics>
+      <%= cell "decidim/statistics", stats.collection %>
+    </section>
   <% end %>
 
   <% if current_participatory_space.show_metrics? %>
