--- a/decidim-core/app/cells/decidim/newsletter_templates/basic_only_text/show.erb
+++ b/decidim-core/app/cells/decidim/newsletter_templates/basic_only_text/show.erb
@@ -27,7 +27,7 @@
               <tr>
                 <th>
                   <% if organization.official_img_header.attached? %>
-                    <%= link_to organization.official_url do %>
+                    <%= link_to newsletter.organization_official_url do %>
                       <%= image_tag organization.attached_uploader(:official_img_header).path, alt: "", style: "max-height: 50px", class: "float-right" %>
                     <% end %>
                   <% end %>
