--- a/decidim-core/app/cells/decidim/newsletter_templates/image_text_cta/show.erb
+++ b/decidim-core/app/cells/decidim/newsletter_templates/image_text_cta/show.erb
@@ -35,7 +35,7 @@ table.button table td {
               <tr>
                 <th>
                   <% if organization.official_img_header.attached? %>
-                    <%= link_to organization.official_url do %>
+                    <%= link_to newsletter.organization_official_url do %>
                       <%= image_tag organization.attached_uploader(:official_img_header).url(host: organization.host), alt: "", style: "max-height: 50px", class: "float-right" %>
                     <% end %>
                   <% end %>
