--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_desktop.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_desktop.html.erb
@@ -26,10 +26,10 @@
   <div class="main-bar__dropdown-container">
     <div id="trigger-dropdown-account" class="main-bar__dropdown-trigger" data-component="dropdown" data-target="dropdown-menu-account">
       <% if current_user.notifications.any? || current_user.unread_conversations.any? %>
-        <span class="main-bar__dropdown-trigger__notification" data-unread-items></span>
+        <span class="main-bar__notification" data-unread-items></span>
       <% end %>
       <% if current_user.avatar.attached? %>
-        <span class="main-bar__dropdown-trigger__avatar">
+        <span class="main-bar__avatar">
           <span>
             <%= image_tag(
                   current_user.attached_uploader(:avatar).path(variant: :thumb),
