--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_mobile.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_main_links_mobile.html.erb
@@ -1,36 +1,31 @@
-<a href="" class="flex flex-col items-center" aria-label="<%= t("layouts.decidim.header.sign_in") %>">
-  <%= icon "home-2-line", class: "w-8 h-8 fill-current" %>
-  <span class="text-sm first-letter:uppercase">Inici</span>
-</a>
-<a href="" class="flex flex-col items-center" aria-label="<%= t("decidim.search.term_input_placeholder") %>">
-  <%= icon "search-line", class: "w-8 h-8 fill-current" %>
-  <span class="text-sm first-letter:uppercase"><%= t("decidim.search.term_input_placeholder") %></span>
-</a>
-<a href="" class="flex flex-col items-center" aria-label="<%= t("decidim.profiles.show.activity") %>">
-  <%= icon "bubble-chart-line", class: "w-8 h-8 fill-current" %>
-  <span class="text-sm first-letter:uppercase"><%= t("decidim.profiles.show.activity") %></span>
-</a>
+<%= link_to decidim.root_url do %>
+  <%= icon "home-2-line" %><span><%= t("decidim.menu.home") %></span>
+<% end %>
+<%= link_to decidim.search_path do %>
+  <%= icon "search-line" %><span><%= t("decidim.search.term_input_placeholder") %></span>
+<% end %>
+<%= link_to decidim.last_activities_path do %>
+  <%= icon "bubble-chart-line" %><span><%= t("decidim.profiles.show.activity") %></span>
+<% end %>
 <% if !current_user %>
-  <a href="<%= decidim.new_user_session_path %>" class="flex flex-col items-center" aria-label="<%= t("layouts.decidim.header.sign_in") %>">
-    <%= icon "login-box-line", class: "w-8 h-8 fill-current" %>
-    <span class="text-sm first-letter:uppercase"><%= t("layouts.decidim.header.sign_in") %></span>
-  </a>
+  <%= link_to decidim.new_user_session_path do %>
+    <%= icon "login-box-line" %><span><%= t("layouts.decidim.header.sign_in") %></span>
+  <% end %>
 <% else %>
-  <a href="" class="flex flex-col items-center relative" aria-label="<%= t("layouts.decidim.user_profile.account") %>">
+  <%= link_to decidim.profile_path(current_user.nickname) do %>
     <% if current_user.notifications.any? %>
-      <span class="w-2.5 h-2.5 rounded-full block absolute top-0 right-2 bg-primary"></span>
+      <span class="main-bar__notification"></span>
     <% end %>
     <% if current_user.avatar.attached? %>
-      <div class="w-8 h-8 rounded-full overflow-hidden">
+      <div class="main-bar__avatar">
         <%= image_tag(
                 current_user.attached_uploader(:avatar).path(variant: :thumb),
-                class: "object-cover w-full h-full",
                 alt: t("decidim.author.avatar", name: decidim_sanitize(current_user.avatar.name))
               ) %>
       </div>
     <% else %>
-      <%= icon "user-smile-line", class: "w-8 h-8 fill-current" %>
+      <%= icon "user-smile-line" %>
     <% end %>
-    <span class="text-sm first-letter:uppercase"><%= t("layouts.decidim.user_profile.account") %></span>
-  </a>
+    <span><%= t("layouts.decidim.user_profile.account") %></span>
+  <% end %>
 <% end %>
