handle click cookies banner

--- a/decidim-core/app/cells/decidim/data_consent/dialog.erb
+++ b/decidim-core/app/cells/decidim/data_consent/dialog.erb
@@ -1,4 +1,4 @@
-<div id="dc-dialog-wrapper" class="cookies__container" data-nosnippet role="region">
+<div id="dc-dialog-wrapper" class="cookies__container" data-nosnippet role="region" hidden>
   <div class="cookies">
     <div class="cookies__left">
       <%= image_pack_tag("media/images/decidim-symbol.svg", alt: t("layouts.decidim.footer.decidim_logo")) %>
