--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_activity.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_activity.scss
@@ -1,5 +1,5 @@
 .activity{
-  @apply grid grid-cols-2 md:grid-cols-[calc(100%/6)_1fr_25%] items-center md:items-start gap-2 md:gap-12 py-4 first:pt-0 last:pb-0;
+  @apply grid grid-cols-[1fr_20%] md:grid-cols-[calc(100%/6)_1fr_20%] items-center md:items-start gap-2 md:gap-12 py-4 first:pt-0 last:pb-0;
 
   &__container{
     @apply divide-y divide-gray-3;
