refactor cookies modal

--- a/decidim-core/app/cells/decidim/data_consent/dialog.erb
+++ b/decidim-core/app/cells/decidim/data_consent/dialog.erb
@@ -1,12 +1,12 @@
 <div id="dc-dialog-wrapper" class="cookies__container" data-nosnippet role="region" hidden>
   <div class="cookies">
     <div class="cookies__left">
-      <%= image_pack_tag("media/images/decidim-symbol.svg", alt: t("layouts.decidim.footer.decidim_logo")) %>
-      <div class="space-y-2">
+      <%= external_icon "media/images/decidim-symbol.svg", class: "text-[#FF3333]" %>
+      <div>
         <div class="h5">
           <%= t("layouts.decidim.data_consent.dialog.title") %>
         </div>
-        <p class="text-sm text-gray-2">
+        <p>
           <%= t("layouts.decidim.data_consent.dialog.description") %>
         </p>
       </div>
