--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_cookies.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_cookies.scss
@@ -35,7 +35,7 @@
     @apply border-4 border-background rounded p-4 my-2 first:mt-0 last:mb-0;
 
     &-trigger{
-      @apply flex justify-between items-center cursor-pointer;
+      @apply flex justify-between items-center;
 
       > :first-child{
         @apply grow flex items-center gap-2;
