--- a/decidim-meetings/app/cells/decidim/meetings/content_blocks/highlighted_meetings/content.erb
+++ b/decidim-meetings/app/cells/decidim/meetings/content_blocks/highlighted_meetings/content.erb
@@ -1,1 +1,1 @@
-<%= cell "decidim/meetings/highlighted_meetings_for_component", published_components.one? ? published_components.first : published_components %>
+<%= meetings_cell %>
