Hide highlighted proposals content block if no proposals present

--- a/decidim-proposals/app/cells/decidim/proposals/content_blocks/highlighted_proposals/content.erb
+++ b/decidim-proposals/app/cells/decidim/proposals/content_blocks/highlighted_proposals/content.erb
@@ -1,1 +1,1 @@
-<%= cell "decidim/proposals/highlighted_proposals_for_component", published_components.one? ? published_components.first : published_components, order: model.settings.order %>
+<%= proposals_cell %>
