--- a/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
+++ b/decidim-core/app/views/layouts/decidim/shared/_drawer.html.erb
@@ -1,19 +1,15 @@
 <% close_url = local_assigns[:close_url] %>
-<% turbo_frame = local_assigns[:turbo_frame] || "main_frame" %>
-<div data-drawer="<%= close_url %>">
+<div>
+  <%# REDESIGN_PENDING - Update layout and update %>
   <div>
-    <%= content_tag :div, data: { drawer_close: close_url } do %>
-      <%= icon "close-line", class: "w-5 h-5 text-secondary fill-current" %>
-    <% end %>
     <% if local_assigns[:prev].present? %>
       <div data-drawer-prev><%= icon "arrow-right-s-line", class: "w-8 h-8 text-secondary fill-current" %></div>
     <% end %>
     <% if local_assigns[:next].present? %>
       <div data-drawer-next><%= icon "arrow-left-s-line", class: "w-8 h-8 text-secondary fill-current" %></div>
     <% end %>
-    <%= turbo_frame_tag "drawer_content_frame", data: { drawer_content: "" } do %>
-      <div><%= yield %></div>
-      <aside><%= yield :drawer_aside %></aside>
-    <% end %>
+    <div><%= yield %></div>
+    <%# REDESIGN_PENDING - Rename this file and this drawer_aside identifier if the content is reused to not mention drawer %>
+    <aside><%= yield :drawer_aside %></aside>
   </div>
 </div>
