--- a/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
@@ -1,3 +1,4 @@
+<%# REDESIGN_PENDING - Replace this layout with other not using drawers %>
 <%= render layout: "layouts/decidim/shared/drawer", locals: { close_url: meetings_path } do %>
   <div class="meeting__container">
 
@@ -54,7 +55,7 @@
     <div class="mt-8">
       <ul class="drawer-metadata__container" data-metadata-footer>
         <%= content_tag :li, resource_reference(meeting), class: "drawer-metadata__item" %>
-        <%= content_tag :li, resource_version(meeting, versions_path: meeting_version_path(meeting, meeting.versions.count), **turbo_frame_options(:drawer_content_frame)), class: "drawer-metadata__item" %>
+        <%= content_tag :li, resource_version(meeting, versions_path: meeting_version_path(meeting, meeting.versions.count)), class: "drawer-metadata__item" %>
         <%= content_tag :li, link_to(t("add_to_calendar", scope: "decidim.meetings.meetings.calendar_modal"), nil, remote: true, data: { dialog_open: "calendarShare_#{meeting.id}" }), class: "drawer-metadata__item" %>
       </ul>
     </div>
