--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
@@ -24,6 +24,16 @@ edit_link(
     <% end %>
 
     <%= cell("decidim/announcement", current_participatory_space.announcement) %>
+
+    <%# REDESIGN_PENDING - This part requires a redesign and maybe moved to the metadata content block %>
+    <% if current_participatory_space.parent.present? %>
+      <div class="row">
+        <div class="small-12 columns">
+          <%= render partial: "decidim/assemblies/assemblies/nav_breadcrumb",
+            locals: { assemblies: current_participatory_space.ancestors.to_a } %>
+        </div>
+      </div>
+    <% end %>
   </div>
 
   <section class="content-block assembly__content-block">
