--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -55,7 +55,10 @@
   @import "stylesheets/decidim/redesigned_documents.scss";
   @import "stylesheets/decidim/redesigned_photos.scss";
   @import "stylesheets/decidim/redesigned_cards.scss";
+  @import "stylesheets/decidim/redesigned_floating_help.scss";
+  @import "stylesheets/decidim/redesigned_metrics.scss";
   @import "stylesheets/decidim/redesigned_endorsers_list.scss";
+  @import "stylesheets/decidim/redesigned_activity.scss";
   @import "stylesheets/decidim/redesigned_tooltip.scss";
 }
 
