--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/show.html.erb
@@ -14,140 +14,169 @@
   )
 %>
 
-<%= participatory_space_floating_help %>
+<div class="process__container">
 
-<% if current_participatory_space.private_space? %>
-  <%= render partial: "decidim/shared/private_participatory_space",
-             locals: { text: t("private_space", scope: "decidim.participatory_processes.show") } %>
-<% end %>
+  <%= participatory_space_floating_help %>
 
-<%= cell("decidim/announcement", current_participatory_space.announcement) %>
+  <div>
+    <% if current_participatory_space.private_space? %>
+      <%= cell("decidim/announcement", t("private_space", scope: "decidim.participatory_processes.show"), callout_class: "alert") %>
+    <% end %>
 
-<div class="row column">
-  <div class="row">
-    <div class="columns medium-7 mediumlarge-8">
-      <div class="section">
-        <h2 class="show-for-sr"><%= t(".title") %></h2>
-        <% if participatory_process_group.present? %>
-          <%= render partial: "participatory_process_group" %>
-        <% end %>
-        <div class="lead">
-          <%= decidim_sanitize_editor translated_attribute(current_participatory_space.short_description) %>
-        </div>
-        <%= decidim_sanitize_editor_admin translated_attribute(current_participatory_space.description) %>
-      </div>
-      <%= attachments_for current_participatory_space %>
-      <%= render_hook(:participatory_space_highlighted_elements) %>
-
-      <% if related_processes.any? %>
-        <div class="section row collapse related_processes">
-          <h4 class="section-heading"><%= t "related_processes", scope: "decidim.participatory_processes.show" %></h4>
-          <div class="collapsible-list row small-up-1 medium-up-2 card-grid">
-            <% related_processes.each do |related_process| %>
-              <%= card_for(related_process) %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-
-      <% if linked_assemblies.any? %>
-        <div class="section">
-          <h4 class="section-heading"><%= t("participatory_process.show.related_assemblies", scope: "decidim") %></h4>
-          <div class="row small-up-1 medium-up-2 card-grid">
-            <% linked_assemblies.each do |linked_assembly| %>
-              <%= card_for(linked_assembly) %>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-
-    </div>
-    <div class="section columns medium-5 mediumlarge-4 large-3">
-      <div class="card extra">
-        <div class="card__content">
-          <%= render partial: "decidim/shared/follow_button",
-                     locals: { followable: current_participatory_space, large: false } %>
-        </div>
-      </div>
-      <div class="card extra definition-data">
-        <% if translated_attribute(current_participatory_space.participatory_scope).present? %>
-          <div class="definition-data__item participatory_scope">
-            <span class="definition-data__title"><%= t("participatory_scope", scope: "decidim.participatory_processes.show") %></span>
-            <%= translated_attribute(current_participatory_space.participatory_scope) %>
-          </div>
-        <% end %>
-
-        <% if translated_attribute(current_participatory_space.target).present? %>
-          <div class="definition-data__item target">
-            <span class="definition-data__title"><%= t("target", scope: "decidim.participatory_processes.show") %></span>
-            <%= translated_attribute(current_participatory_space.target) %>
-          </div>
-        <% end %>
-
-        <% if translated_attribute(current_participatory_space.participatory_structure).present? %>
-          <div class="definition-data__item participatory_structure">
-            <span class="definition-data__title"><%= t("participatory_structure", scope: "decidim.participatory_processes.show") %></span>
-            <%= translated_attribute(current_participatory_space.participatory_structure) %>
-          </div>
-        <% end %>
-
-        <% area = current_participatory_space.area %>
-        <% if translated_attribute(area&.name).present? %>
-          <div class="definition-data__item area">
-            <span class="definition-data__title"><%= t("area", scope: "decidim.participatory_processes.show") %></span>
-            <% if translated_attribute(area.area_type&.name).present? %>
-              <%= translated_attribute(area.area_type.name) %><span>&#45;</span>
-            <% end %>
-            <%= translated_attribute(area.name) %>
-          </div>
-        <% end %>
-
-        <% if translated_attribute(current_participatory_space.meta_scope).present? %>
-          <div class="definition-data__item scope">
-            <span class="definition-data__title"><%= t("scope", scope: "decidim.participatory_processes.show") %></span>
-            <%= translated_attribute(current_participatory_space.meta_scope) %>
-          </div>
-        <% end %>
-
-        <% if translated_attribute(current_participatory_space.local_area).present? %>
-          <div class="definition-data__item local_area">
-            <span class="definition-data__title"><%= t("local_area", scope: "decidim.participatory_processes.show") %></span>
-            <%= translated_attribute(current_participatory_space.local_area) %>
-          </div>
-        <% end %>
-
-        <% if translated_attribute(current_participatory_space.developer_group).present? %>
-          <div class="definition-data__item developer-group">
-            <span class="definition-data__title"><%= t("developer_group", scope: "decidim.participatory_processes.show") %></span>
-            <%= translated_attribute(current_participatory_space.developer_group) %>
-          </div>
-        <% end %>
-
-        <% if current_participatory_space.start_date.present? %>
-          <div class="definition-data__item start-date">
-            <span class="definition-data__title"><%= t("start_date", scope: "decidim.participatory_processes.show") %></span>
-            <%== l(current_participatory_space.start_date, format: :long) %>
-          </div>
-        <% end %>
-
-        <% if current_participatory_space.end_date.present? %>
-          <div class="definition-data__item end-date">
-            <span class="definition-data__title"><%= t("end_date", scope: "decidim.participatory_processes.show") %></span>
-            <%== l(current_participatory_space.end_date, format: :long) %>
-          </div>
-        <% end %>
-      </div>
-      <%= resource_reference(current_participatory_space) %>
-      <%= render partial: "decidim/shared/share_modal" %>
-      <%= embed_modal_for participatory_process_widget_url(current_participatory_space, format: :js) %>
-    </div>
+    <%= cell("decidim/announcement", current_participatory_space.announcement) %>
   </div>
 
+  <section class="content-block process__content-block">
+    <div>
+      <h2 class="h2 decorator"><%= t(".title") %></h2>
+
+      <div class="content-block__description">
+        <%= decidim_sanitize_editor translated_attribute(current_participatory_space.short_description) %>
+      </div>
+
+      <%= link_to description_participatory_process_path, class: "button button__lg button__text-secondary" do %>
+        <span><%= t("more_info", scope: "layouts.decidim.participatory_processes.participatory_process") %></span>
+        <%= icon "arrow-right-line" %>
+      <% end %>
+    </div>
+
+    <div class="process__nav-container">
+      <button id="dropdown-trigger" data-component="dropdown" data-target="dropdown-menu" data-auto-close="true">
+        <span><%= t("decidim.searches.filters.jump_to") %></span>
+        <%= icon "arrow-down-s-line" %>
+        <%= icon "arrow-up-s-line" %>
+      </button>
+      <ul id="dropdown-menu" class="process__nav">
+        <%= render partial: "layouts/decidim/process_nav_item", collection: process_nav_items, as: :item %>
+      </ul>
+    </div>
+
+    <%= render partial: "metadata" %>
+  </section>
+
+  <section class="content-block">
+    <div class="content-block__title">
+      <h2 class="h2 decorator"><%= t("activity", scope: "decidim.profiles.show") %></h2>
+      <div class="process__metadata-link-endorsers">
+        <% Decidim::User.take(6).each do |user| %>
+          <span class="endorsers-list__avatar">
+            <%= cell "decidim/author", present(user), layout: :avatar, skip_profile_link: true %>
+          </span>
+        <% end %>
+      </div>
+      <div class="label text-lg"><%= Decidim::User.count %></div>
+      <%#= REDESIGN_PENDING: add link to last_activity %>
+      <%= link_to "#", class: "button button__sm button__text-secondary" do %>
+        <span><%= t("see_all_activity", scope: "layouts.decidim.participatory_processes.participatory_process") %></span>
+        <%= icon "arrow-right-line" %>
+      <% end %>
+    </div>
+
+    <span class="content-block__span"><%= t("name", scope: "decidim.content_blocks.last_activity") %></span>
+    <%#= REDESIGN_PENDING: user_activity requires a proper modal to make it work %>
+    <div class="space-y-4">
+      <%= cell "decidim/activities", Decidim::LastActivity.new(current_organization).query.limit(6) %>
+    </div>
+  </section>
+
+  <%#= REDESIGN_PENDING: the html block must include id="html-block-..." to span the full width %>
+  <section id="html-block-SEED">
+  </section>
+
+  <%#= REDESIGN_PENDING: proposals markup not ready %>
+  <%= render_hook(:participatory_space_highlighted_elements) %>
+
+  <% if related_processes.any? %>
+    <section class="content-block">
+      <div class="content-block__title">
+        <h2 class="h2 decorator"><%= t "related_processes", scope: "decidim.participatory_processes.show" %></h2>
+        <div class="label text-lg"><%= related_processes.length %></div>
+        <%#= REDESIGN_PENDING: add link to index %>
+        <%= link_to "#", class: "button button__sm button__text-secondary" do %>
+          <span><%= t("decidim.participatory_processes.pages.home.highlighted_processes.see_all_processes") %></span>
+          <%= icon "arrow-right-line" %>
+        <% end %>
+      </div>
+
+      <div class="process__block-grid">
+        <% related_processes.each do |related_process| %>
+          <%= card_for(related_process) %>
+        <% end %>
+      </div>
+    </section>
+  <% end %>
+
+  <% if linked_assemblies.any? %>
+    <section class="content-block">
+      <div class="content-block__title">
+        <h2 class="h2 decorator"><%= t("participatory_process.show.related_assemblies", scope: "decidim") %></h2>
+        <div class="label text-lg"><%= linked_assemblies.length %></div>
+        <%#= REDESIGN_PENDING: add link to index %>
+        <%= link_to "#", class: "button button__sm button__text-secondary" do %>
+          <span><%= t("decidim.participatory_processes.pages.home.highlighted_processes.see_all_processes") %></span>
+          <%= icon "arrow-right-line" %>
+        <% end %>
+      </div>
+
+      <div class="process__block-grid">
+        <% linked_assemblies.each do |linked_assembly| %>
+          <%= card_for(linked_assembly) %>
+        <% end %>
+      </div>
+    </section>
+  <% end %>
+
+  <%# REDESIGN_PENDING: integrate blog section %>
+  <% linked_blogs = Decidim::Blogs::Post.take(3) %>
+  <% if linked_blogs.any? %>
+    <section class="content-block">
+      <div class="content-block__title">
+        <h2 class="h2 decorator"><%= t("name", scope: "decidim.components.blogs") %></h2>
+        <div class="label text-lg"><%= linked_blogs.length %></div>
+        <%#= REDESIGN_PENDING: add link to index %>
+        <%= link_to "#", class: "button button__sm button__text-secondary" do %>
+          <span><%= t("decidim.participatory_processes.pages.home.highlighted_processes.see_all_processes") %></span>
+          <%= icon "arrow-right-line" %>
+        <% end %>
+      </div>
+
+      <span class="content-block__span"><%= "Last published" %></span>
+      <div class="process__block-grid">
+        <% linked_blogs.each do |linked_blog| %>
+          <%#= card_for(linked_blog) %>
+          <%= cell "decidim/blogs/post_g", linked_blog %>
+        <% end %>
+      </div>
+    </section>
+  <% end %>
+
   <% if current_participatory_space.show_statistics? %>
-     <%= cell "decidim/statistics", stats.collection %>
+    <%= cell "decidim/statistics", stats.collection %>
   <% end %>
 
   <% if current_participatory_space.show_metrics? %>
     <%= render partial: "metrics" %>
   <% end %>
+
+  <section class="content-block">
+    <div class="content-block__title">
+      <h2 class="h2 decorator"><%= t("decidim.application.documents.related_documents") %></h2>
+    </div>
+
+    <%= render partial: "decidim/application/documents", locals: { documents: current_participatory_space.documents } %>
+  </section>
+
+  <section class="content-block">
+    <div class="content-block__title">
+      <h2 class="h2 decorator"><%= t("decidim.application.photos.related_photos") %></h2>
+    </div>
+
+    <%= cell("decidim/photos_list", current_participatory_space.photos) %>
+  </section>
+
 </div>
+
+<!-- this elements goes outside of the .process__container block -->
+<section class="process__block-reference">
+  <%= resource_reference(current_participatory_space) %>
+</section>
