--- a/decidim-core/app/cells/decidim/data_consent/modal.erb
+++ b/decidim-core/app/cells/decidim/data_consent/modal.erb
@@ -6,7 +6,7 @@
       <p id="dialog-desc-dc-modal">
         <%= t("layouts.decidim.data_consent.modal.description") %>
       </p>
-      <div class="mt-8" data-component="accordion">
+      <div class="mt-8" data-component="accordion" data-multiselectable="false">
         <% categories.each do |category| %>
           <%= render(
             {
