do not include a div inside button

--- a/decidim-core/app/cells/decidim/data_consent/category.erb
+++ b/decidim-core/app/cells/decidim/data_consent/category.erb
@@ -18,10 +18,10 @@
         <%= category[:title] %>
       </h3>
 
-      <div>
+      <span>
         <%= icon "arrow-down-s-line", class: "cookies__category-trigger-arrow" %>
         <%= icon "arrow-up-s-line", class: "cookies__category-trigger-arrow" %>
-      </div>
+      </span>
     </button>
 
   </div>
