--- a/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_meeting.html.erb
@@ -1,5 +1,4 @@
-<%# REDESIGN_PENDING - Replace this layout with other not using drawers %>
-<%= render layout: "layouts/decidim/shared/drawer", locals: { close_url: meetings_path } do %>
+<%= render layout: "layouts/decidim/shared/layout_item", locals: { back_path: meetings_path } do %>
   <div class="meeting__container">
 
     <h1 class="h2 decorator" data-heading-tag><%= present(meeting).title(links: true, html_escape: true ) %></h1>
@@ -64,7 +63,7 @@
     <%#= cell("decidim/flag_modal", meeting) %>
   </div>
 
-  <% content_for :drawer_aside do %>
+  <% content_for :aside do %>
 
     <div class="space-y-4">
       <% if allowed_to?(:update, :meeting, meeting: meeting) %>
