--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_layout.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_layout.scss
@@ -49,9 +49,9 @@
 }
 
 .layout-2col-grid{
-  @apply grid grid-cols-10 gap-12 py-16 md:py-32 [&>main]:col-span-8 [&>aside]:col-span-2 [&>main]:relative;
+  @apply grid grid-cols-10 gap-12 py-4 md:py-32 [&>main]:col-span-8 [&>aside]:col-span-2 [&>main]:relative;
 
   &__back{
-    @apply button button__text-secondary absolute -left-[1em] -top-8 -translate-y-full;
+    @apply button button__text-secondary md:absolute md:-left-[1em] md:-top-8 md:-translate-y-full;
   }
 }
