--- a/decidim-core/app/cells/decidim/search_results/show.erb
+++ b/decidim-core/app/cells/decidim/search_results/show.erb
@@ -1,8 +1,6 @@
 <% sections_to_render.each_with_index do |(type, results), index| %>
   <%= cell(
     "decidim/search_results_section",
-    { type => results },
-    is_paginated: has_selected_resource_type?,
-    is_last_section: (index + 1) < sections_to_render.count
+    { type => results }
   ) %>
 <% end %>
